Progress towards tree reuse working